adding dynammique title (helmet)

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sayara Dz - Fabriquant</title>
+    <title>Sayara Dz</title>
     <!--    custom-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:200,300,500,600,700,800,900&display=swap"/>
 </head>
